syntax = "proto2";

package cloudprober.surfacer.stackdriver;

message SurfacerConf {
  optional bool batch = 1 [default = true];
  optional uint64 batch_size = 2 [default = 200];
  optional uint64 batch_timer_sec = 3 [default = 10];

  optional string monitoring_url = 5 [default = "custom.googleapis.com/cloudprober/"];
}
