// Provides all configuration necesary to list targets for a cloudprober probe.
syntax = "proto2";

package cloudprober.targets.rtc;

// TargetsConf represents listing targets from a key/val set stored in the RTC
// API under a certain provided configuration. It always only lists the keys
// (hostnames) and provides a resolver which will resolve to a single tag. This
// can be used as a kind of drop-in replacement for GCE Instances when that
// would not be possible. For example, one could set "resolve_tag" to "ip", and
// this lister will now list all VM names, with a resolver that resolves those
// names to their ip addresses.
//
// For more information on RTC see
// https://cloud.google.com/deployment-manager/runtime-configurator/reference/rest/
//
// It is assumed that this is being curated, and indeed can be controlled with
// settings in a cloudprober configuration.  See
// cloudprober/config/config.proto.
message TargetsConf {
  // Config-name to list hosts from.
  optional string cfg = 1;
  // Expiration time in ms for RTC variables. Variables older will be ignored.
  optional int32 expire_msec = 2 [default = 30000];
  // Which address tag to resolve a hostname to. Hosts report multiple addresses
  // for themselves, each with a "tag" (like "PUBLIC_IP" or "PRIVATE_IP"). For
  // more information, see the "tag" field of the RtcTargetInfo.Address message.
  optional string resolve_tag = 3;
  // groups is a list of groups that should be included by the lister. Hosts can
  // assign themselves a set "groups" such as "Zone1" or "HasMultiNIC". If this
  // field is set, then we will filter out hosts that don't have a group that
  // matches any groups listed here. If groups is not set, no filtering will
  // occure.
  //
  // For more information, see the "groups" field of the RtcTargetInfo message.
  //
  // Example :
  //   Host1 has group "G1" and "G2"
  //   Host2 has groups "G2" and "G3"
  //   Host3 has no groups.
  //   The following table shows values for groups and which hosts will be
  //   listed.
  //   groups      | Listed Hosts
  //   ------------|--------------------
  //   ["G1"]      | Host1
  //   ["G2"]      | Host1, Host2
  //   ["G1","G3"] | Host1, Host2
  //   ["G4"]      | None
  //   []          | Host1, Host2, Host3
  repeated string groups = 4;
  // How often targets should be evaluated. Any number less than or equal to 0
  // will result in no target caching (targets will be reevaluated on demand).
  optional int32 re_eval_sec = 6 [default = 0];
  // The alphanumeric ID of the project which this instance is member of
  // (not project number)
  // e.g. bbmc-cloudprober-instance-cxkdsa123
  repeated string project_id = 7;
}
